fix(Modificação do metodo de buscar horarios dispo): substitui métodos auxiliares por lógica única em obterDisponibilidadePersonal - Gera slots de 15min a partir de data completa - Exclui horários de tipos INTERVALO e RESTRITO - Simplifica fluxo de obtenção de disponibilidade